@@ -36,6 +36,7 @@ G 11069	update the mail.jar manifest to include DynamicImport-Package
 <no id>	add mail.mime.allowencodedmessages System property
 <no id>	add support for SASL authentication to SMTP provider
 <no id>	add SMTPSenderFailedException to indicate problems with sender address
+<no id>	ignore encoding for composite content when writing message
 
 
 		  CHANGES IN THE 1.4.3 RELEASE
